# ImageProcessingWebsite-ShiKouMuZi

./: .gitignore  ImageProcessWebsite.html  ImageProcessWebsite.md
Log/: log.txt
Server/: Cargo.toml  Rocket.toml
Server/src/: CORS.rs  main.rs
Server/src/API/: mod.rs
Server/src/API/RequestTypings/: user.rs
Server/src/Typings/: mod.rs
Server/src/Typings/Suggestion/: Suggestion.rs
Server/src/Typings/User/: user.rs
Server/src/User/: mod.rs  sql.rs  user.rs
Server/src/api/: user.rs
Server/src/api/request/: user.rs
Server/src/backend_api/: about_api.rs  histroy_operation_api.rs  manager_api.rs  mod.rs  operation_api.rs  suggestion_api.rs  user_api.rs
Server/src/backend_api/base_method/: base.rs  base_method.rs  mod.rs
Server/src/backend_api/operation/: mod.rs
Server/src/backend_api/operation/affine_transform/: affine_transform.rs  mod.rs
Server/src/backend_api/operation/api/: affine_transform_api.rs  base_method.rs  mat_api.rs  mod.rs  numeric_calculation_api.rs
Server/src/backend_api/operation/api/typngs/: Image.rs  mod.rs
Server/src/backend_api/operation/mat/: mat.rs
Server/src/backend_api/operation/numeric_calculation/: mod.rs  numeric_calculation.rs
Server/src/backend_api/operation/utils/: mod.rs
Server/src/backend_api/operation/utils/affine_transform/: affine_transform.rs
Server/src/backend_api/operation/utils/mat/: mat.rs
Server/src/backend_api/operation/utils/numeric_calculation/: mod.rs  numeric_calculation.rs
Server/src/backend_api/request/: mod.rs  user_fromdata_impl.rs
Server/src/backend_api/response/: mod.rs
Server/src/backend_api/response/about/: about.rs  mod.rs
Server/src/backend_api/response/history_operation/: earse_history_operation.rs  get_history_operation.rs  history_operation_details.rs  mod.rs
Server/src/backend_api/response/manager/: common.rs  history_operation.rs  mod.rs  suggestion.rs  user.rs
Server/src/backend_api/response/operation/: common.rs  image_index.rs  mod.rs
Server/src/backend_api/response/operation/mat/: mod.rs  read_img.rs
Server/src/backend_api/response/suggestion/: mod.rs  suggestion.rs
Server/src/backend_api/response/user/: common.rs  login.rs  mod.rs  resigter.rs
Server/src/base_macro/: mod.rs  url_macro.rs
Server/src/sqlite/: sqlite.rs
Server/src/typings/: mod.rs
Server/src/typings/user/: user.rs
Until/JsonUtil/: BaseObject.py  OpenCV.py  Rocket.py  Vue.py  about_until.py
Until/OpenCVUtil/: CMakeLists.txt
Until/OpenCVUtil/src/: MConfig.h  MError.h  MLog.h  MObjectBase.h  ObjectBase.h  OpenCVUtil.cpp  OpenCVUtil.h
Until/OpenCVUtil/src/BasicOperation/: BasicOperatrion.h
Until/OpenCVUtil/src/MAffineTransformation/: MAffineTransform.cpp  MAffineTransform.h  MAffineTransformInf.cpp  MAffineTransformInf.h
Until/OpenCVUtil/src/MBasicOperation/: MBasicOperation.cpp  MBasicOperatrion.h
Until/OpenCVUtil/src/MMat/: MMat.cpp  MMat.h  MMatInf.cpp  MMatInf.h
Until/OpenCVUtil/src/MNumericCalculation/: MNumericCalculation.cpp  MNumericCalculation.h  MNumericCalculationInf.cpp  MNumericCalculationInf.h
Web/imageprocessingwebsite/: .eslintrc.js  README.md  package-lock.json  package.json
Web/imageprocessingwebsite/src/: App.vue  main.js
Web/imageprocessingwebsite/src/components/: HistoryOperation.vue  Login.vue  ManagerSilder.vue  NavigationBar.vue  RequestImgList.vue  Suggestion.vue  UsertPwd.vue  UsetPwd.vue
Web/imageprocessingwebsite/src/components/ImgOperations/AffineTransform/: Flip.vue  Rotate.vue
Web/imageprocessingwebsite/src/components/ImgOperations/Mat/: FreeImg.vue  HVStack.vue  ReadImg.vue  Resize.vue
Web/imageprocessingwebsite/src/components/ImgOperations/NumericCalculation/: AddOrSubBetweenMatAndScalar.vue  AddOrSubBetweenMatAndValue.vue  AddOrSubBetweenMats.vue  Bitwise.vue
Web/imageprocessingwebsite/src/module/: HistoryOperations.ts  Img.js  Img.ts  Operation.js  Operation.ts  UserMsg.js  UserMsg.ts
Web/imageprocessingwebsite/src/plugin/: AxiosAPI.js  MittAPI.js
Web/imageprocessingwebsite/src/router/: index.js
Web/imageprocessingwebsite/src/store/: index.js
Web/imageprocessingwebsite/src/typings/: ArgPlaceholder.js  HistoryOperation.js  HistoryOperations.js  HistoryOperationsSet.js  ImagePlaceholder.js  Img.js  Operation.js  UserMsg.js
Web/imageprocessingwebsite/src/views/: AboutView.vue  HistoryOperationsView.vue  HomeView.vue  ImageOperationView.vue  LoginView.vue  ManagerView.vue  RegisterView.vue  UserView.vue
Web/imageprocessingwebsite/src/views/manager/: HistoryOperation.vue  Suggestion.vue  UserMsg.vue
Web/imageprocessingwebsite/src/views/user/: LoginView.vue  RegisterView.vue
