[package]
name = "Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["secrets", "json"] }
rusqlite = {version = "0.29.0", features = ["bundled"]}
rocket_ws = { package = "rocket_ws", version = "0.1.0" }