[package]
name = "Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["secrets", "json"] }
rusqlite = {version = "0.31.0", features = ["bundled",]}
rocket_ws = { package = "rocket_ws", version = "0.1.0" }
serde = { version = "1.0.190", features = ["derive"] }
uuid = {version = "0.8", features = ["v4"]}
regex = "1.10.3"